Fixed Scrolling on Mobile 3

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -68,7 +68,7 @@ body {
 
 .scroll-wrapper {
 	-webkit-overflow-scrolling: touch;
-  	overflow-y: auto;
+  	overflow-y: auto !important;
 
 	/* important:  dimensions or positioning here! */
 }
